[package]
authors = ["ihciah<ihciah@gmail.com>"]
categories = ["database", "web-programming"]
description = "Cloudflare KV Proxy SDK."
edition = "2021"
keywords = ["cloudflare", "worker", "kv", "proxy"]
license = "MIT/Apache-2.0"
name = "cloudflare-kv-proxy"
readme = "README.md"
repository = "https://github.com/ihciah/cloudflare-kv-proxy"
version = "0.1.1"

[dependencies]
reqwest = {version = "0.11", features = ["json", "rustls"]}
serde = {version = "1.0", features = ["derive"]}
serde_with = {version = "1", features = ["macros", "json"]}
thiserror = "1"

coarsetime = {version = "0.1", optional = true}
lru = {version = "0.7", optional = true}
parking_lot = {version = "0.12", optional = true}
serde_json = {version = "1", optional = true}

[dev-dependencies]
tokio = {version = "1", features = ["rt", "macros"]}

[features]
cache = ["lru", "parking_lot", "serde_json", "coarsetime"]
default = ["cache"]
